--- a/css/_svg.css
+++ b/css/_svg.css
@@ -25,23 +25,28 @@ g#beat1 > line
   stroke:black;
   fill:black;
 }
-g#DLarrow, g#ULarrow, g#CNarrow, g#URarrow, g#DRarrow, g#mine
+g#Larrow, g#Darrow, g#Uarrow, g#Rarrow, g#mine
 {
   fill-opacity:1;
   stroke:black;
-  stroke-width:1;
+  stroke-width:0.5;
   stroke-opacity:1;
 }
-g#mine
+g#Larrow path:first-child, g#Darrow path:first-child,
+g#Uarrow path:first-child, g#Rarrow path:first-child
 {
-  stroke-width: 0.2;
+	stroke-width: 1;
 }
 
+g#mine > circle
+{
+	stroke-width: 0.1;
+}
 g#mine > circle:first-child
 {
   fill:red;
 }
-g#mine > circle:first-child + circle, g#CNarrow > rect
+g#mine > circle:first-child + circle
 {
   fill:black;
 }
@@ -68,42 +73,15 @@ g#hold_bdy > line, g#hold_end > path, g#roll_bdy > line, g#roll_end > path
   stroke:black;
   stroke-width: 0.3;
 }
-.note_004
-{
-  fill: red;
-}
-.note_008
-{
-  fill: blue;
-}
-.note_012
-{
-  fill: purple;
-}
-.note_016
-{
-  fill: yellow;
-}
-.note_024
-{
-  fill: pink;
-}
-.note_032
-{
-  fill: orange;
-}
-.note_048
-{
-  fill: aqua;
-}
-.note_064
-{
-  fill: lime;
-}
-.note_192
-{
-  fill: #808080;
-}
+.note_004 { fill: red;     }
+.note_008 { fill: blue;    }
+.note_012 { fill: purple;  }
+.note_016 { fill: yellow;  }
+.note_024 { fill: pink;    }
+.note_032 { fill: orange;  }
+.note_048 { fill: aqua;    }
+.note_064 { fill: lime;    }
+.note_192 { fill: #808080; }
 text
 {
   font-family: "DejaVu Sans Mono", "Courier New", Courier, monospace;
