Another try at multi column CSS. May have to make it a table after all.

--- a/css/edit_count.css
+++ b/css/edit_count.css
@@ -5,12 +5,17 @@
 	line-height: 1em;
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
+	clear: both;
 }
+#multiCol > p > a
+{
+	width: 14em;
+	display: inline-block;
+}
+
 #multiCol > p > span
 {
 	display: inline-block;
-	width: 16em;
-	padding-right: 2em;
 }
 
 #multiCol
