Force max width for long song titles.

--- a/css/edit_table.css
+++ b/css/edit_table.css
@@ -28,6 +28,10 @@
   {
     font-family: "DejaVu Sans Mono", "Courier New", Courier, monospace;
   }
+  #edits > tbody > tr > td:first-child
+  {
+    max-width: 15em;
+  }
   #edits > tbody > tr > td > dl > dt
   {
     clear: both;
