--- a/css/create.css
+++ b/css/create.css
@@ -9,6 +9,10 @@
 		background-color: #9999ff;
 		top: 3.6em;
 	}
+	#svg_nav_form
+	{
+		display: none;
+	}
 	.edit select
 	{
 		padding-right: 1em;
