--- a/css/create.css
+++ b/css/create.css
@@ -38,7 +38,7 @@
 		margin: 0;
 		padding: 0;
 	}
-	#navEditTransform > li.long
+	#navEditTransform > li.long, #navEditControls > li.long
 	{
 		width: 20em;
 	}
