--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ header > *
 	height: 80px;
 }
 
-header >h1 { text-align:left; font-size:2em; font-weight:bold; width: 700px; margin-right: 0;
+header >h1 { text-align:left; font-size:2em; font-weight:bold; width: 700px; margin-right: 0; margin-bottom: 0;
 	  }
 	 
 	header > h1 > a
@@ -54,6 +54,8 @@ article
 article > h2
 {
 	clear: both;
+	display: block;
+	padding-top: 1em;
 	text-align: center;
 }
 
@@ -66,6 +68,19 @@ article > *
 footer
 {
 	clear: both;
+}
+footer > *
+{
+	margin-left: 10px;
+}
+
+nav#main_nav
+{
+	display: inline;
+	float: left;
+	margin-left: 10px;
+	background: #404551 url("/images/nav-active.png") repeat-x;
+	width: 940px;
 }
 
 /*
