Remove duplicate jQuery where used. All pages will be using jQuery now.

--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
 	background: #404551 url("/images/nav-active.png") repeat-x;
 	}
 
+/*
 #content {
 		background: #464957 url("/images/content-bg.png") top center no-repeat;
 	}
+	*/
 
 #bd {
 		margin: 10px 6px 6px 6px;
