Force no bullets.

--- a/css/create.css
+++ b/css/create.css
@@ -38,6 +38,7 @@
 		width: 10em;
 		margin: 0;
 		padding: 0;
+		list-style-type: none;
 	}
 	#navEditTransform > li.long, #navEditControls > li.long
 	{
