--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 		margin: 10px 6px 6px 6px;
 		}
 		
-#logo, #userbar, #header, header {
+#logo, #userbar, #header {
 		background: #000 url("/images/head.png") left repeat-x;
 		height: 80px;
 		}
