Take advantage of 960 GS again.

--- a/css/edit_count.css
+++ b/css/edit_count.css
@@ -1,33 +1,21 @@
 @import "main.css";
 
-#multiCol > p
-{
-	line-height: 1em;
-	padding-top: 0.2em;
-	padding-bottom: 0.2em;
-	clear: both;
-}
-#multiCol > p > a
-{
-	width: 14em;
-	display: inline-block;
-}
-
-#multiCol > p > span
-{
-	display: inline-block;
-}
-
 #multiCol
 {
-	margin: 0 auto;
-	-moz-column-count: 3;
-	-moz-column-gap: 10px;
-	/* -moz-column-rule: 1px solid black; */
-	-webkit-column-count: 3;
-	-webkit-column-gap: 10px;
-	/* -webkit-column-rule: 1px solid black; */
-	column-count: 3;
-	column-gap: 10px;
-	/* column-rule: 1px solid black; */
+	margin-right: 0;
+}
+
+#multiCol > li
+{
+	margin-right: 0;
+	margin-left: 0;
+}
+#multiCol > li > div
+{
+	margin-right: 0;
+}
+#multiCol > li > div:first-child
+{
+	margin-right: 10px;
+	margin-left: 0;
 }
