--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,19 @@
 /* @import "setup.css";*/
+header, footer, nav, article, section
+{
+	display: block;
+}
 .error_list { color:red; font-weight:bold}strong 
 {font-weight:bold}.success_list {color:green;font-weight:bold}
 @media screen{
 	html { 
-		background: url("images/body-bg.png") repeat-y scroll center top #404551}  
+		background: url("/images/body-bg.png") repeat-y scroll center top #404551}  
 	html,.sans { font-family:"DejaVu Sans",Arial,Helvetica,sans; 
 font-size:1em} .serif { font-family:"DejaVu Serif","Times New Roman",Times,serif} pre,.mono 
 { font-family:"DejaVu Sans Mono",Courier,"Courier New",monospace} .tcenter { 
 text-align:center}  p,pre { line-height:1.3em; /* padding-top:15px; padding-bottom:15px */}  
 table td,table th { padding:3px}  
-/* a:link { color:#008} a:visited { color:#424}   */
 
-a:visited { color: #f4d799; font-style: italic; }
 body { line-height:130%; }  
 
 header >h1 { text-align:left; font-size:2em; font-weight:bold; width: 700px; margin-right: 0; margin-bottom: 0;
@@ -43,12 +45,11 @@ nav#main_nav
 	background: #404551 url("/images/nav-active.png") repeat-x;
 }
 
-.container_12 footer.grid_12
+footer
 {
 	margin-left: 0;
 	margin-right: 0;
 	background: #464957;
-	border: 10px solid #333740;
 }
 footer > p
 {
