--- a/style.css
+++ b/style.css
@@ -8,11 +8,19 @@ body {
 	background: #404551 url("/images/nav-active.png") repeat-x;
 	}
 
-/*
-#content {
+a:link, a:visited {
+		color: #F4C533;
+		text-decoration: none;
+		}
+	
+a:hover, a:active {
+		color: #F8D878;
+		text-decoration: none;
+		}	
+	
+article {
 		background: #464957 url("/images/content-bg.png") top center no-repeat;
 	}
-	*/
 
 #bd {
 		margin: 10px 6px 6px 6px;
@@ -33,7 +41,24 @@ body {
 		width: 240px
 		}
 		
-
+footer p {
+			margin: 4px 2px 4px 4px;
+			font-size: 80%;
+		}
+		
+#footer-left, #footer-right {
+		height: 54px;
+		background: #363843 url("/images/content-bg.png") top center no-repeat;
+		border: 1px #25262E;
+		border-style: solid none solid none;
+		margin-right: 0;
+		margin-left: 0;
+		}
+		
+#footer-right {
+		width:240px;	
+		}
+		
 	
 /*** Menu skin ***/
 .sf-menu {
