--- a/css/create.css
+++ b/css/create.css
@@ -2,6 +2,7 @@
 
 @media screen
 {
+	/*
 	#svg_nav
 	{
 		position: fixed;
@@ -10,6 +11,7 @@
 		top: 120px;
 		left: 100px;
 	}
+	*/
 	#svg_nav > p
 	{
 		margin: 0;
