Login complete for now. Now for the counterpart.

--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@ article {
 #logo {
 		margin-right: 0;
 		}
-		
+/*		
 #userbar {
 		margin-right: 0;
 		margin-left: 0;
 		width: 240px
 		}
-		
+*/		
 footer p {
 			margin: 4px 2px 4px 4px;
 			font-size: 80%;
