--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,11 @@ header, footer, nav, article, section
 	html { 
 		background: url("/images/body-bg.png") repeat-y scroll center top #404551}  
 	html,.sans { font-family:"DejaVu Sans",Arial,Helvetica,sans; 
-font-size:1em} .serif { font-family:"DejaVu Serif","Times New Roman",Times,serif} pre,.mono 
+font-size:1em} .serif { font-family:"DejaVu Serif","Times New Roman",Times,serif} 
+pre,.mono 
 { font-family:"DejaVu Sans Mono",Courier,"Courier New",monospace} .tcenter { 
-text-align:center}  p,pre { line-height:1.3em; /* padding-top:15px; padding-bottom:15px */}  
+text-align:center}
+p,pre { line-height:1.3em; /* padding-top:15px; padding-bottom:15px */}  
 table td,table th { padding:3px}  
 
 body { line-height:130%; }  
@@ -23,7 +25,8 @@ header >h1 >a:link,header >h1 >a:visited { color:inherit; text-decoration:none}
 
 div#userbar
 {
-	width: 240px;
+	padding-left: 10px;
+	padding-right: 10px;
 	display: inline-block;
 }
 
@@ -59,6 +62,8 @@ footer > p
 #userbar .ui-widget
 {
 	margin-top: 27px;
+	margin-left: 175px;
+	width: 200px;
 }
 
 #userbar .ui-widget > div
