--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,9 @@ header, footer, nav, article, section
 {
 	display: block;
 }
-.error_list { color:red; font-weight:bold}strong 
-{font-weight:bold}.success_list {color:green;font-weight:bold}
+.error_list { color:red; font-weight:bold}
+.hide { display: none; visibility: hidden; }
+strong  {font-weight:bold}.success_list {color:green;font-weight:bold}
 @media screen{
 	html { 
 		background: url("/images/body-bg.png") repeat-y scroll center top #404551}  
