--- a/css/edit_table.css
+++ b/css/edit_table.css
@@ -3,56 +3,74 @@
 
 @media screen
 {
-	#edits
-	{
-		margin: 0 auto 20px;
-		border-collapse: collapse;
+	.edit {
+	margin: 0px 20px 0px 20px;
+	border-bottom: 1px solid #25262E;
+	line-height: 1.2em;
+	padding: 6px;
+	height: 50px;
+	background: url("/images/editfill.png") top repeat-x;
 	}
-	#edits > caption
-	{
-		margin-bottom: 10px;
+	
+.edit-statistics dt, .edit-statistics dd {
+	display: inline;
+	font-size: 90%;
 	}
-	#edits > col#statcol
-	{
-		/* width: 10em; */
+	
+.edit-statistics dt {
+	margin-right: 3px;
+	font-weight: bold;
 	}
-	#edits > thead > tr > th
-	{
-		font-weight: normal;
-		font-style: italic;
+	
+.edit-statistics dd {
+	margin-right: 6px;
 	}
-	#edits > thead > tr > th, #edits > tbody > tr > td
-	{
-		border: 2px solid #003366;
+		
+dl.edit-statistics {
+		margin-bottom: 0px !important;
 	}
-	#edits > tbody > tr > td > dl
-	{
-		font-family: "DejaVu Sans Mono", "Courier New", Courier, monospace;
-		margin-bottom: 0px;
+	
+.edit-title {
+	font-size: 130%;
+	font-weight: bold;
 	}
-	#edits > tbody > tr > td:first-child
-	{
-		max-width: 15em;
+	
+.edit-difficulty {
+	font-size: 220%;
+	float: right;
+	padding: 8px 2px 10px 120px;
+	margin-top: 10px;
 	}
-	#edits > tbody > tr > td > dl > dt
-	{
-		clear: both;
-		width: 8em;
-		float: left;
+	
+.single-style .edit-difficulty {
+	background: url("/images/singleglyph.png") right center no-repeat;
 	}
-	#edits > tbody > tr > td > dl > dt:after
+	
+.routine-style .edit-difficulty {
+	background: url("/images/routineglyph.png") right center no-repeat;
+	}	
+
+.double-style .edit-difficulty {
+	background: url("/images/doubleglyph.png") right center no-repeat;
+	}
+	
+.halfdouble-style .edit-difficulty {
+	background: url("/images/halfdoubleglyph.png") right center no-repeat;
+	}
+	
+.edit-left {
+	width: 704px;
+	display: inline-block;
+	}
+	
+.edit-right {
+	width: 160px;
+	display: inline-block;
+	vertical-align: top;
+	}
+	
+	.edit dt:after
 	{
 		content: ":";
-	}
-	#edits > tbody > tr > td > dl > dd
-	{
-		padding-left: 8em;
-		line-height: 1.3em;
-		text-align: right;
-	}
-	#edits > tbody > tr > td > ul > li
-	{
-		margin-left: 0px;
-		list-style-type: none;
 	}
 }
